# CanvasGL-3.0

./: README.md
CanvasGL_v3/: CMakeLists.txt
CanvasGL_v3/Headers/: CanvasGL.h  Global.h
CanvasGL_v3/Headers/Canvas/: Camera.h  Canvas.h  Color.h  Coord.h  Drawer.h  Util.h
CanvasGL_v3/Headers/Drawables/: CCircle.h  CDot.h  CLine.h  CObject.h  CRectangle.h  CTriangle.h
CanvasGL_v3/Source/: Global.cpp  Main.cpp
CanvasGL_v3/Source/Canvas/: Camera.cpp  Canvas.cpp  Color.cpp  Coord.cpp  Drawer.cpp  Util.cpp
CanvasGL_v3/Source/Drawables/: CCircle.cpp  CDot.cpp  CLine.cpp  CObject.cpp  CRectangle.cpp  CTriangle.cpp
